const_typed_builder_test/compile_fail/group_1.stderr
error: Group cannot be satisfied
 --> ./compile_fail/group_1.rs:5:13
  |
5 |     #[group(baz = at_least(2))]
  |             ^^^

error[E0599]: no function or associated item named `builder` found for struct `Foo` in the current scope
  --> ./compile_fail/group_1.rs:10:27
   |
6  |     pub struct Foo {
   |     -------------- function or associated item `builder` not found for this struct
...
10 |     let foobuilder = Foo::builder().bar("Hello world!".to_string());
   |                           ^^^^^^^ function or associated item not found in `Foo`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `builder`, perhaps you need to implement it:
           candidate #1: `const_typed_builder::Builder`
